grammars/block/test/corpus/inline-attributes.txt
==================
Simple class attribute
==================

[text]{.class}

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
ID and class
==================

[highlighted]{#important .alert}

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Multiple classes
==================

[text]{.class1 .class2 .class3}

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
ID with multiple classes
==================

[span]{#id .class1 .class2}

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Inline attributes in context
==================

Here is [highlighted text]{#id .alert} in a paragraph.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Multiple attributed spans
==================

This has [first]{.a} and [second]{.b} spans.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Traditional link unchanged
==================

This is a [link](https://example.com) in text.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Mix of links and spans
==================

A [link](url) and [span]{.class} together.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Span with code span inside
==================

Here is [`code`]{.highlight} text.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Span with emphasis inside
==================

Text with [*emphasized*]{.special} content.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Span with strong emphasis inside
==================

Text with [**bold**]{.strong} content.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Key-value attribute
==================

[styled]{style="color: red;"}

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Mixed attribute types
==================

[element]{#id .class key="value"}

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Attribute with single quotes
==================

[element]{title='Some Title'}

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Multiple key-value attributes
==================

[element]{width="100px" height="50px"}

---

(document
  (blank_line)
  (paragraph
    content: (inline)))
