grammars/block/test/corpus/inline-formatting.txt
================================================================================
Strikethrough: Basic
================================================================================

This is ~~deleted text~~ in a paragraph.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Strikethrough: With spaces
================================================================================

This is ~~deleted text with spaces~~ here.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Strikethrough: Multiple in paragraph
================================================================================

First ~~deleted~~ and second ~~removed~~ text.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Strikethrough: Nested with bold
================================================================================

This is ~~**bold deleted**~~ text.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Highlight: Basic
================================================================================

This is ==highlighted text== in a paragraph.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Highlight: With spaces
================================================================================

This is ==important highlighted text== here.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Highlight: Nested with emphasis
================================================================================

This is ==*emphasized highlight*== text.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Subscript: Chemical formula
================================================================================

H~2~O

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Subscript: Multiple in sequence
================================================================================

C~6~H~12~O~6~

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Subscript: In sentence
================================================================================

The formula for water is H~2~O.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Superscript: Basic exponent
================================================================================

x^2^

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Superscript: In equation
================================================================================

E=mc^2^

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Superscript: Multiple digits
================================================================================

10^100^

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Superscript: In sentence
================================================================================

The area is x^2^ square units.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Mixed formatting: All types together
================================================================================

Text with **bold**, *italic*, ~~strikethrough~~, ==highlight==, H~2~O, and x^2^.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Adjacent to punctuation
================================================================================

End with ~~deletion~~. Start new sentence.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Disambiguation: Subscript vs strikethrough
================================================================================

Single ~subscript~ versus ~~strikethrough~~.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Unicode content: Strikethrough
================================================================================

~~删除的文本~~

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Unicode content: Highlight
================================================================================

==强调的文本==

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))
