grammars/block/test/corpus/inline-math.txt
================================================================================
Inline Math: Simple expression
================================================================================

The equation $x^2$ is simple.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: Complex expression
================================================================================

The formula $x^2 + y^2 = z^2$ is Pythagorean theorem.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: With Greek letters
================================================================================

The value $\alpha + \beta$ represents the sum.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: With fractions
================================================================================

The fraction $\frac{a}{b}$ is displayed inline.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: E=mc^2
================================================================================

Einstein's equation $E=mc^2$ changed physics.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: Multiple in one paragraph
================================================================================

First $x$ and second $y$ in the same line.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: No space around content
================================================================================

Tight spacing $x$ works fine.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Currency: Dollar followed by digit (not math)
================================================================================

Simple amount: $50

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Currency: Larger amount (not math)
================================================================================

Cost is $160 for the item.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Currency: Range with dash (not math)
================================================================================

Price range: $25-30

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Currency: Thousands separator (not math)
================================================================================

Budget: $20,000 and $30,000

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Currency: Multiple amounts in sentence (not math)
================================================================================

Prices are $10, $20, and $30 respectively.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Currency: With decimal (not math)
================================================================================

The price is $19.99 today.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Math and Currency: Mixed in same paragraph
================================================================================

The equation $x + y = 10$ costs $50 to compute.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Invalid: Dollar followed by space (not math)
================================================================================

Just a dollar $ sign here.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Invalid: Isolated dollar sign (not math)
================================================================================

This has $ but no closing delimiter.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: With subscripts
================================================================================

The expression $H_2O$ uses subscripts.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: With superscripts
================================================================================

The power $x^{2n}$ is complex.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: Summation notation
================================================================================

The sum $\sum_{i=1}^{n} i$ equals $\frac{n(n+1)}{2}$.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: Integral notation
================================================================================

The integral $\int_0^1 x dx$ equals one half.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: Matrix notation
================================================================================

The matrix $\begin{pmatrix} a & b \\ c & d \end{pmatrix}$ is two by two.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: At start of paragraph
================================================================================

$x = 5$ is the solution.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: At end of paragraph
================================================================================

The solution is $x = 5$

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: Only math in paragraph
================================================================================

$f(x) = x^2 + 2x + 1$

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: With punctuation
================================================================================

The equation $E=mc^2$, discovered by Einstein, is famous.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: With bold
================================================================================

The **important** equation $x^2 + y^2 = r^2$ is circular.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: With italic
================================================================================

The *key* formula $a = \pi r^2$ calculates area.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))

================================================================================
Inline Math: Adjacent to code span
================================================================================

The function `f(x)` equals $x^2$ for all values.

--------------------------------------------------------------------------------

(document
  (blank_line)
  (paragraph
    content: (inline)))
